force-app/main/default/objects/Flow_Switch__mdt/Flow_Switch__mdt.object-meta.xml
<CustomObject>
    <description>Control Center to On or Off Record Triggered Flows.
Record marked Active controls the flows.
Ensure only one record is marked as Active.</description>
    <label>Flow Switch</label>
    <pluralLabel>Flow Switches</pluralLabel>
</CustomObject>