force-app/main/default/objects/Flow_Switch__mdt/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case</label>
    <type>Checkbox</type>
</CustomField>