force-app/main/default/objects/Flow_Switch__mdt/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>