force-app/main/default/objects/Flow_Switch__mdt/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity</label>
    <type>Checkbox</type>
</CustomField>