force-app/main/default/objects/Flow_Switch__mdt/listViews/Preferred_View.listView-meta.xml
<ListView>
    <fullName>Preferred_View</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>Preferred View</label>
</ListView>